RESOLVED FIXED156493
PolymorphicAccess::regenerate() shouldn't have to clone non-generated AccessCases
https://bugs.webkit.org/show_bug.cgi?id=156493
Summary PolymorphicAccess::regenerate() shouldn't have to clone non-generated AccessC...
Filip Pizlo
Reported 2016-04-11 21:58:35 PDT
...
Attachments
the patch (4.26 KB, patch)
2016-04-12 15:04 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2016-04-12 15:04:47 PDT
Created attachment 276283 [details] the patch
Geoffrey Garen
Comment 2 2016-04-12 16:08:56 PDT
Comment on attachment 276283 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=276283&action=review r=me > Source/JavaScriptCore/bytecode/PolymorphicAccess.cpp:1571 > + found = true; > + break; Can we just return here?
Filip Pizlo
Comment 3 2016-04-13 11:47:45 PDT
(In reply to comment #2) > Comment on attachment 276283 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=276283&action=review > > r=me > > > Source/JavaScriptCore/bytecode/PolymorphicAccess.cpp:1571 > > + found = true; > > + break; > > Can we just return here? Yup, good point.
Filip Pizlo
Comment 4 2016-04-13 12:05:01 PDT
Note You need to log in before you can comment on or make changes to this bug.