PolymorphicAccess::regenerate() shouldn't have to clone non-generated AccessCases https://bugs.webkit.org/show_bug.cgi?id=156493

Reviewed by Geoffrey Garen.

Cloning AccessCases is only necessary if they hold some artifacts that are used by code that
they already generated. So, if the state is not Generated, we don't have to bother with
cloning them.

This should speed up PolymorphicAccess regeneration a bit more.

* bytecode/PolymorphicAccess.cpp:
(JSC::AccessCase::commit):
(JSC::PolymorphicAccess::regenerate):



Canonical link: https://commits.webkit.org/174656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199508 268f45cc-cd09-0410-ab3c-d52691b4dbfc